# aegis

./: .env.example  .gitignore  .pre-commit-config.yaml  alembic.ini  pyproject.toml  pytest.ini  todo.md
3rdparty_packages/: openlit-1.33.10-py3-none-any.whl
backend/: alembic.ini
backend/agents/: Readme.md  crud.py  main.py  models.py  schemas.py  types.py
backend/agents/agents/: dagagent.py
backend/agents/api/: deps.py
backend/agents/components/: __init__.py  _batch_openai_client.py
backend/agents/core/: config.py
backend/agents/manager/: teammanager.py
backend/agents/tasks/: run.py
backend/common/: celery.py  config.py  db.py  initial_data.py  models.py
backend/common/core/: authz.polar  authz.py  celery.py  config.py  security.py
backend/common/crud/: __init__.py  base_crud.py  group_crud.py  image_media_crud.py  m2m_client_crud.py  role_crud.py  team_crud.py  tenant_crud.py  user_crud.py
backend/common/db/: init_db.py  session.py
backend/common/models/: __init__.py  base_uuid_model.py  group_model.py  hero_model.py  image_media_model.py  links_model.py  m2m_client_model.py  media_model.py  role_model.py  team_model.py  tenant_model.py  user_follow_model.py  user_model.py
backend/common/schemas/: common_schema.py  group_schema.py  hero_schema.py  image_media_schema.py  m2m_client_schema.py  media_schema.py  response_schema.py  role_schema.py  team_schema.py  (+2 more)
backend/data/: main.py
backend/evals/: crud.py  main.py  models.py  schema.py
backend/gateway/: main.py  models.py
backend/migrations/: env.py  script.py.mako
backend/proxy/: crud.py  main.py  models.py  schema.py
backend/storage/: crud.py  main.py  schema.py
backend/template/: crud.py  main.py  models.py  schema.py
backend/tests/: conftest.py
backend/utils/: init_db.py  initial_data.py
deployment/local/: .env  .gitignore  create-dbs.sql  docker-compose.infra-minimal.yaml  docker-compose.infra.yaml
notice/: autogen-studio  fastapi-alembic-sqlmodel-async  onyx
(+107 files in other folders)
