[project]
name = "aegis-stack"
version = "0.1.0"
description = "Enterprise Grade AI agents stack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
