[project]
name = "aegis-stack"
version = "0.1.0"
description = "Enterprise Grade AI agents stack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "tenacity<9.0.0,>=8.2.3",
    "pydantic>2.0",
    "alembic<2.0.0,>=1.12.1",
    "httpx<1.0.0,>=0.25.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.21",
    # Pin bcrypt until passlib supports the latest
    "bcrypt==4.0.1",
    "pydantic-settings<3.0.0,>=2.2.1",
    "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
    "pyjwt<3.0.0,>=2.8.0",
    "redis[hiredis]>=5.2.1",
    "sqlalchemy-utils>=0.41.2",
    "fastapi-pagination>=0.12.34",
    "fastapi-async-sqlalchemy>=0.6.1",
    "fastapi-limiter>=0.1.6",
    "minio>=7.2.15",
    "asyncpg>=0.30.0",
    "cryptography>=44.0.1",
    "celery>=5.4.0",
    "asyncer>=0.0.8",
    "fastapi-cache2>=0.2.2",
]

[project.optional-dependencies]
proxy = [
    "litellm>=1.61.8",
]
agents = [
    "crewai>=0.95.0",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
]
data-pipeline = [
    "dask>=2025.2.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
    "bandit>=1.8.3",
]
